dmproadmap-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dmproadmap
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dmproadmap
  template:
    metadata:
      labels:
        app: dmproadmap
    spec:
      containers:
        - name: dmproadmap
          image: jopiedina/k8s-dmproadmap:latest # Replace with your Docker image
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: '512Mi'
              cpu: '250m'
            limits:
              memory: '1Gi'
              cpu: '500m'
