dmproadmap-postgres-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dmproadmap-postgres
spec:
  selector:
    matchLabels:
      app: dmproadmap-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dmproadmap-postgres
    spec:
      containers:
        - image: postgres:13
          name: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
