dmproadmap-postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: dmproadmap-postgres
spec:
  ports:
  - port: 5432
  selector:
    app: dmproadmap-postgres
