dmproadmap-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: dmproadmap
spec:
  selector:
    app: dmproadmap
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
