ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dmproadmap-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - your-domain.com
      secretName: dmproadmap-tls
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dmproadmap
                port:
                  number: 80
